Additionsl task iss complete
The new page with cart statistics has been added

--- a/main.html
+++ b/main.html
@@ -51,6 +51,7 @@
         <div class="cart-items" id="cart-items"></div>
         <div class="order-total">
           <p>Сума замовлення <span class="total-price">0 грн</span></p>
+          <button class="stats-btn">Статистика замовлення</button>
           <button class="order-btn">Замовити</button>
         </div>
     </div>
